salesforce-main/src/main/default/objects/Booking_Detail__c/Booking_Detail__c.object-meta.xml
<CustomObject>
    <label>Booking Detail</label>
    <nameField>
        <displayFormat>BK-{0}</displayFormat>
        <label>BK#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>