salesforce-main/src/main/default/objects/Booking_Detail__c/fields/Legacy_Product__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product__c</fullName>
    <description>Legacy product id from systems outside the product catalog.</description>
    <inlineHelpText>Legacy product id from systems outside the product catalog.</inlineHelpText>
    <label>Legacy Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>