salesforce-main/src/main/default/objects/Booking_Detail__c/fields/Legacy_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product_Name__c</fullName>
    <description>Legacy product name from outside the CRM and product catalog.</description>
    <inlineHelpText>Legacy product name from outside the CRM and product catalog.</inlineHelpText>
    <label>Legacy Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>