salesforce-main/src/main/default/objects/Booking_Detail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Ordered_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>