salesforce-main/src/main/default/objects/Booking_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Ordered_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>