salesforce-main/src/main/default/objects/Booking_Detail__c/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <label>Product Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>